role user (postman)

--- a/TrainingVideos/src/main/resources/application.properties
+++ b/TrainingVideos/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/trainingvideos
+spring.datasource.username=postgres
+spring.datasource.password=5634337vel
+jwt.secret=javamaster
 
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
