--- a/FindTrainingVideos/src/main/resources/application.properties
+++ b/FindTrainingVideos/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/TrainingVideos
+
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
 
