--- a/FindTrainingVideos/src/main/resources/application.properties
+++ b/FindTrainingVideos/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
+spring.mvc.hiddenmethod.filter.enabled=true
+springdoc.swagger-ui.path=/trainingvideosdoc.html
