--- a/FindTrainingVideos/src/main/resources/application.properties
+++ b/FindTrainingVideos/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.hiddenmethod.filter.enabled=true
 springdoc.swagger-ui.path=/trainingvideosdoc.html
+
+jwt.secret=pasyagitka
