--- a/FindTrainingVideos/pom.xml
+++ b/FindTrainingVideos/pom.xml
@@ -55,6 +55,12 @@
             <version>2.12.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
         <!--test-->
 
         <!--validation-->
